[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "buildozer>=1.5.0",
    "flask-migrate>=4.1.0",
    "flask>=3.1.1",
    "kivy>=2.3.1",
    "wcwidth>=0.2.13",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
]
